--- a/templates/header.html
+++ b/templates/header.html
@@ -1,23 +1,15 @@
 <nav class="site-nav" role="navigation" aria-label="Main">
-    <div class="site-nav-inner">
-        <div class="brand">
-            <a class="brand-link" href="/index.html" aria-label="Home">
-                <div class="brand-logo">L</div>
-                <div class="brand-title">Lorem ipsum</div>
-            </a>
-        </div>
+  <div class="site-nav-inner">
+    <button id="nav-toggle" class="nav-toggle" aria-expanded="false" aria-controls="nav-links">
+      <span class="sr-only">Toggle menu</span>☰
+    </button>
 
-        <button id="nav-toggle" class="nav-toggle" aria-expanded="false" aria-controls="nav-links">
-            <span class="sr-only">Toggle menu</span>
-        ☰
-        </button>
-
-        <ul id="nav-links" class="nav-links" role="menubar">
-            <li role="none"><a role="menuitem" href="/index.html">Home</a></li>
-            <li role="none"><a role="menuitem" href="/learn.html">Learn</a></li>
-            <li role="none"><a role="menuitem" href="/blogs/index.html">Blogs</a></li>
-            <li role="none"><a role="menuitem" href="/projects/index.html">Projects</a></li>
-            <li role="none"><a role="menuitem" href="/about.html">About</a></li>
-        </ul>
-    </div>
+    <ul id="nav-links" class="nav-links" role="menubar">
+      <li role="none"><a role="menuitem" href="/index.html">Home</a></li>
+      <li role="none"><a role="menuitem" href="/learn.html">Learn</a></li>
+      <li role="none"><a role="menuitem" href="/blogs/index.html">Blogs</a></li>
+      <li role="none"><a role="menuitem" href="/projects/index.html">Projects</a></li>
+      <li role="none"><a role="menuitem" href="/about.html">About</a></li>
+    </ul>
+  </div>
 </nav>
